# Visual_RWKV7_Pytorch

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  main.py  model.py  pyproject.toml  test_model.py
.agents/: AGENTS.md
VisualRWKV7/: __init__.py  diffSLIC.py  model.py
VisualRWKV7/utils/: colors.py  data.py  diffSLIC_funcs.py  drop.py  gamut.py  graph.py
configs/model/: large.yaml  medium.yaml  small.yaml  tiny.yaml
results/: compare_architectures.txt  demo_spix.txt  demo_vq.txt  diagnose_training.txt  fast_test_training.txt
scripts/: compare_architectures.py  demo.py  visualize_model.py  visualize_superpixels.py
spixrwkv7/: __init__.py
spixrwkv7/models/: vq_rwkv7.py
tasks/classification/humordb/: train.py
tasks/diagnostics/: diagnose_training.py  fast_test_training.py
tasks/segmentation/ade20k/: sanity.py  train.py
tests/: test_colors.py  test_dataload.py  test_diffSlic.py  test_model.py  test_regression.py
tests/test_models/: test_model.py
