[project]
name = "visual-rwkv7-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "numpy>=1.26.0",
    "torch>=2.12.0",
    "pytest>=7.0.0",
    "opencv-python>=4.13.0.92",
    "scipy>=1.17.1",
    "scikit-learn>=1.9.0",
    "scikit-image>=0.26.0",
    "pillow>=12.2.0",
    "matplotlib>=3.11.0",
    "torchvision>=0.27.0",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
